fix overlay cutting off issue

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 body::before {
   z-index: -1;
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
